# internal/dinosaur/pkg/api/admin/private/model_central.go
@@ -50,4 +50,5 @@ type Central struct {
 	Namespace                     string               `json:"namespace,omitempty"`
 	Central                       CentralSpec          `json:"central,omitempty"`
 	Scanner                       ScannerSpec          `json:"scanner,omitempty"`
+	ForceReconcile                bool                 `json:"force_reconcile,omitempty"`
 }
