# internal/dinosaur/pkg/api/admin/private/model_central_update_request.go
@@ -16,4 +16,5 @@ type CentralUpdateRequest struct {
 	CentralVersion         string      `json:"central_version,omitempty"`
 	Central                CentralSpec `json:"central,omitempty"`
 	Scanner                ScannerSpec `json:"scanner,omitempty"`
+	ForceReconcile         bool        `json:"force_reconcile,omitempty"`
 }
