# internal/dinosaur/pkg/api/private/model_managed_central_all_of_metadata_annotations.go
@@ -14,5 +14,4 @@ package private
 type ManagedCentralAllOfMetadataAnnotations struct {
 	MasId          string `json:"mas/id"`
 	MasPlacementId string `json:"mas/placementId"`
-	ForceReconcile bool   `json:"forceReconcile,omitempty"`
 }
